--- a/home/wiki/App/Setup/Update/In-app.html
+++ b/home/wiki/App/Setup/Update/In-app.html
@@ -50,10 +50,10 @@
       </ul>
     </div>
     <h2>
-      <span class="mw-headline" id="Special:XowaAppUpdate"><a href="http://xowa.org/home/wiki/Special:XowaAppUpdate.html" id="xolnki_2" title="Special:XowaAppUpdate" class="xowa-visited">Special:XowaAppUpdate</a></span>
+      <span class="mw-headline" id="Special:XowaAppUpdate"><a href="http://xowa.org/home/wiki/Special:XowaAppUpdate.html" id="xolnki_2" title="Special:XowaAppUpdate">Special:XowaAppUpdate</a></span>
     </h2>
     <p>
-      This <a href="http://xowa.org/home/wiki/Special:XowaAppUpdate.html" id="xolnki_3" title="Special:XowaAppUpdate" class="xowa-visited">Special page</a> shows all pending updates.
+      This <a href="http://xowa.org/home/wiki/Special:XowaAppUpdate.html" id="xolnki_3" title="Special:XowaAppUpdate">Special page</a> shows all pending updates.
     </p>
     <h3>
       <span class="mw-headline" id="Opening">Opening</span>
@@ -147,7 +147,7 @@
             By default, the time interval is set to 7 days. If XOWA has checked online for an update, it won't check again for another 7 days.
           </li>
           <li>
-            If you want to disable online check or change the interval, you can do so at <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.app.update.html" id="xolnki_4" title="Special:XowaCfg?grp=xowa.app.update" class="xowa-visited">the Options page</a>
+            If you want to disable online check or change the interval, you can do so at <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.app.update.html" id="xolnki_4" title="Special:XowaCfg?grp=xowa.app.update">the Options page</a>
           </li>
         </ul>
       </li>
