--- a/home/wiki/App/UI/Keybindings.html
+++ b/home/wiki/App/UI/Keybindings.html
@@ -62,7 +62,7 @@
       <span class="mw-headline" id="XOWA_keyboard_shortcuts_.28basic.29">XOWA keyboard shortcuts (basic)</span>
     </h2>
     <p>
-      See <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.shortcuts.html" id="xolnki_2" title="Special:XowaCfg?grp=xowa.gui.shortcuts" class="xowa-visited">Options: Gui - Shortcuts</a>
+      See <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.gui.shortcuts.html" id="xolnki_2" title="Special:XowaCfg?grp=xowa.gui.shortcuts">Options: Gui - Shortcuts</a>
     </p>
     <h2>
       <span class="mw-headline" id="XOWA_keyboard_shortcuts_.28advanced.29">XOWA keyboard shortcuts (advanced)</span>
