--- a/home/wiki/App/Xtn/Mediawiki/Score.html
+++ b/home/wiki/App/Xtn/Mediawiki/Score.html
@@ -107,7 +107,7 @@
     </p>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_2" title="Options/Score" class="xowa-visited">Options/Score</a>.
+        Go to <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_2" title="Options/Score">Options/Score</a>.
       </li>
       <li>
         Configure the <b>lilypond</b> binary to whatever directory you chose above.
@@ -144,7 +144,7 @@
       <span class="mw-headline" id="Testing">Testing</span>
     </h2>
     <p>
-      When you're done, visit <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_3" title="Diagnostics" class="xowa-visited">Diagnostics</a> and click on the Score links
+      When you're done, visit <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_3" title="Diagnostics">Diagnostics</a> and click on the Score links
     </p>
   
     </div>
