--- a/home/wiki/App/Xtn/Page_sync.html
+++ b/home/wiki/App/Xtn/Page_sync.html
@@ -228,7 +228,7 @@
     </p>
     <ul>
       <li>
-        <b>online mode required</b>: You must have "Web access enabled" in <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_4" title="Options/Security" class="xowa-visited">Options/Security</a>
+        <b>online mode required</b>: You must have "Web access enabled" in <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_4" title="Options/Security">Options/Security</a>
       </li>
       <li>
         <b>exclusions</b>: Page sync does not work for the following pages: 
