--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -808,7 +808,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_12" title="Wiki setup/Spanish wikis" class="xowa-visited">Wiki_setup/Spanish_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Spanish_wikis.html" id="xolnki_12" title="Wiki setup/Spanish wikis">Wiki_setup/Spanish_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -1034,7 +1034,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_17" title="Options/Dev" class="xowa-visited">Options/Dev</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_17" title="Options/Dev">Options/Dev</a>
       </dd>
     </dl>
     <p>
@@ -1106,7 +1106,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_18" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_18" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
       </dd>
     </dl>
     <h2>
@@ -1632,7 +1632,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_27" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_27" title="Options/Shortcuts">Options/Shortcuts</a>
       </dd>
     </dl>
     <ul>
@@ -1658,7 +1658,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_28" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_28" title="Wiki setup/Listing">Wiki_setup/Listing</a>
       </dd>
     </dl>
     <ul>
@@ -2249,7 +2249,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_35" title="Dev/Command-line/Dumps" class="xowa-visited">Dev/Command-line/Dumps</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_35" title="Dev/Command-line/Dumps">Dev/Command-line/Dumps</a>
       </dd>
     </dl>
     <ul>
