--- a/home/wiki/Change_log/v3.10.3.1.html
+++ b/home/wiki/Change_log/v3.10.3.1.html
@@ -270,7 +270,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts">Options/Shortcuts</a>
       </dd>
     </dl>
     <ul>
@@ -296,7 +296,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_8" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_8" title="Wiki setup/Listing">Wiki_setup/Listing</a>
       </dd>
     </dl>
     <ul>
