--- a/home/wiki/Change_log/v3.11.2.1.html
+++ b/home/wiki/Change_log/v3.11.2.1.html
@@ -70,7 +70,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_6" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_6" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <h3>
@@ -286,7 +286,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_10" title="Options/Dev" class="xowa-visited">Options/Dev</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Dev.html" id="xolnki_10" title="Options/Dev">Options/Dev</a>
       </dd>
     </dl>
     <p>
@@ -358,7 +358,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_11" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_11" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
       </dd>
     </dl>
   
