--- a/home/wiki/Change_log/v3.6.3.1.html
+++ b/home/wiki/Change_log/v3.6.3.1.html
@@ -185,7 +185,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/HTML_databases.html" id="xolnki_6" title="Options/HTML databases" class="xowa-visited">Options/HTML_databases</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/HTML_databases.html" id="xolnki_6" title="Options/HTML databases">Options/HTML_databases</a>
       </dd>
     </dl>
     <ul>
@@ -364,7 +364,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/HTML_databases.html" id="xolnki_7" title="Options/HTML databases" class="xowa-visited">Options/HTML_databases</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/HTML_databases.html" id="xolnki_7" title="Options/HTML databases">Options/HTML_databases</a>
       </dd>
     </dl>
     <p>
