--- a/home/wiki/Dashboard/Image_databases.html
+++ b/home/wiki/Dashboard/Image_databases.html
@@ -59,7 +59,7 @@
       <span class="mw-headline" id="HTML_databases">HTML databases</span>
     </h2>
     <p>
-      New wikis are released through <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_2" title="App/Import/Download Central">App/Import/Download_Central</a>. The current list of wikis are at <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_3" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a> as well as <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_4" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>. Please use the databases from these lists first before the ones below.
+      New wikis are released through <a href="http://xowa.org/home/wiki/App/Import/Download_Central.html" id="xolnki_2" title="App/Import/Download Central">App/Import/Download_Central</a>. The current list of wikis are at <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_3" title="Wiki setup/Listing">Wiki_setup/Listing</a> as well as <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_4" title="Special:XowaDownloadCentral" class="xowa-visited">Special:XowaDownloadCentral</a>. Please use the databases from these lists first before the ones below.
     </p>
     <h2>
       <span class="mw-headline" id="Wikitext_databases">Wikitext databases</span>
