--- a/home/wiki/Dev/File/Setup/Index.html
+++ b/home/wiki/Dev/File/Setup/Index.html
@@ -22,7 +22,7 @@
         Windows: <a href="http://xowa.org/home/wiki/Dev/File/Setup/Windows.html" id="xolnki_2" title="Dev/File/Setup/Windows" class="xowa-visited">Dev/File/Setup/Windows</a>
       </li>
       <li>
-        Linux: <a href="http://xowa.org/home/wiki/Dev/File/Setup/Linux.html" id="xolnki_3" title="Dev/File/Setup/Linux">Dev/File/Setup/Linux</a>
+        Linux: <a href="http://xowa.org/home/wiki/Dev/File/Setup/Linux.html" id="xolnki_3" title="Dev/File/Setup/Linux" class="xowa-visited">Dev/File/Setup/Linux</a>
       </li>
       <li>
         Mac OS X: <a href="http://xowa.org/home/wiki/Dev/File/Setup/Mac_OS_X.html" id="xolnki_4" title="Dev/File/Setup/Mac OS X">Dev/File/Setup/Mac OS X</a>
