--- a/home/wiki/Dev/File/Setup/Windows.html
+++ b/home/wiki/Dev/File/Setup/Windows.html
@@ -58,7 +58,7 @@
         Download the latest version of ImageMagick: <b>ImageMagick-*-Q16-windows.zip</b>
       </li>
       <li>
-        Unzip the file to <b>C:\xowa\bin\windows\imagemagick</b>. When you are done, you should have a file called <b>C:\xowa\bin\windows\imagemagick\convert.exe</b>
+        Unzip the file to <b>C:\xowa\bin\windows_64\imagemagick</b>. When you are done, you should have a file called <b>C:\xowa\bin\windows_64\imagemagick\convert.exe</b>
       </li>
     </ul>
     <h2>
@@ -81,7 +81,7 @@
         Download the 7zip version
       </li>
       <li>
-        Unzip the file to <b>C:\xowa\bin\windows\inkscape</b>. When you are done, you should have a file called <b>C:\xowa\bin\windows\inkscape\inkscape.com</b>.
+        Unzip the file to <b>C:\xowa\bin\windows_64\inkscape</b>. When you are done, you should have a file called <b>C:\xowa\bin\windows\inkscape_64\inkscape.com</b>.
       </li>
     </ul>
     <h2>
@@ -89,7 +89,7 @@
     </h2>
     <ul>
       <li>
-        Navigate to <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.files.general.html" id="xolnki_2" title="Special:XowaCfg?grp=xowa.files.general" class="xowa-visited">Options: Files - General</a> and check "Download enabled"
+        Navigate to <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.files.general.html" id="xolnki_2" title="Special:XowaCfg?grp=xowa.files.general">Options: Files - General</a> and check "Download enabled"
       </li>
       <li>
         Restart XOWA and navigate to any page. Any images will be downloaded automatically.
