--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -46,7 +46,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Reference_tooltips.html" id="xolnki_8" title="Diagnostics/Javascript/Reference tooltips">Diagnostics/Javascript/Reference_tooltips</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_9" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a> (currently via MathJax)
+            <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_9" title="Diagnostics/Math">Diagnostics/Math</a> (currently via MathJax)
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Timeline.html" id="xolnki_10" title="Diagnostics/Javascript/Timeline">Diagnostics/Javascript/Timeline</a>
@@ -86,7 +86,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All" class="xowa-visited">Diagnostics/Scribunto/All</a> 
+        <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All">Diagnostics/Scribunto/All</a> 
         <ul>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Basic.html" id="xolnki_17" title="Diagnostics/Scribunto/Basic">Diagnostics/Scribunto/Basic</a>
@@ -125,7 +125,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_28" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/TitleBlacklist.html" id="xolnki_29" title="Diagnostics/Scribunto/TitleBlacklist" class="xowa-visited">Diagnostics/Scribunto/TitleBlacklist</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/TitleBlacklist.html" id="xolnki_29" title="Diagnostics/Scribunto/TitleBlacklist">Diagnostics/Scribunto/TitleBlacklist</a>
           </li>
         </ul>
       </li>
@@ -143,7 +143,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/WikiHiero/All.html" id="xolnki_31" title="Diagnostics/Xtns/WikiHiero/All" class="xowa-visited">Diagnostics/Xtns/WikiHiero/All</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/WikiHiero/All.html" id="xolnki_31" title="Diagnostics/Xtns/WikiHiero/All">Diagnostics/Xtns/WikiHiero/All</a>
       </li>
     </ul>
     <h2>
@@ -151,7 +151,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_32" title="Diagnostics/Xtns/Wikivoyage/All" class="xowa-visited">Diagnostics/Xtns/Wikivoyage/All</a>
+        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All.html" id="xolnki_32" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <h2>
@@ -181,7 +181,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Score/All.html" id="xolnki_38" title="Diagnostics/Xtns/Score/All" class="xowa-visited">Diagnostics/Xtns/Score/All</a> 
+        <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Score/All.html" id="xolnki_38" title="Diagnostics/Xtns/Score/All">Diagnostics/Xtns/Score/All</a> 
         <ul>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Score/Lilypond.html" id="xolnki_39" title="Diagnostics/Xtns/Score/Lilypond">Diagnostics/Xtns/Score/Lilypond</a>
