--- a/home/wiki/Diagnostics/Scribunto/ParserFunctions.html
+++ b/home/wiki/Diagnostics/Scribunto/ParserFunctions.html
@@ -22,7 +22,7 @@
     </h2>
     <ul>
       <li>
-        Calls code in <a href="http://xowa.org/home/wiki/Module:Diagnostics/ParserFunctions.html" id="xolnki_2" title="Module:Diagnostics/ParserFunctions" class="xowa-visited">Module:Diagnostics/ParserFunctions</a>
+        Calls code in <a href="http://xowa.org/home/wiki/Module:Diagnostics/ParserFunctions.html" id="xolnki_2" title="Module:Diagnostics/ParserFunctions">Module:Diagnostics/ParserFunctions</a>
       </li>
       <li>
         Tests functionality for mw.ext.ParserFunctions.lua
