--- a/home/wiki/Help/Privacy/Desktop.html
+++ b/home/wiki/Help/Privacy/Desktop.html
@@ -135,7 +135,7 @@
       Application logs are enabled by default. They are saved to files in the following directory: <code>/xowa/user/anonymous/app/tmp</code>.
     </p>
     <p>
-      Application logs can be disabled at <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_2" title="Options/Security" class="xowa-visited">Options/Security</a>
+      Application logs can be disabled at <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_2" title="Options/Security">Options/Security</a>
     </p>
     <h2>
       <span class="mw-headline" id="Page_history">Page history</span>
@@ -144,16 +144,16 @@
       Page history is enabled by default. The data is saved to the following file: <code>/xowa/user/anonymous/app/data/history/page_history.csv</code>.
     </p>
     <p>
-      Page history can be disabled at <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_3" title="Options/Security" class="xowa-visited">Options/Security</a>
+      Page history can be disabled at <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_3" title="Options/Security">Options/Security</a>
     </p>
     <h2>
       <span class="mw-headline" id="Temporary_HTML_files">Temporary HTML files</span>
     </h2>
     <p>
-      All HTML for pages will be saved to and loaded from a temp directory on disk. The files are saved to the following directory: <code>/xowa/user/anonymous/app/tmp/html</code>. This is done for performance reasons related to SWT / XULRunner. See <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_4" title="Options/Security" class="xowa-visited">Options/Security</a>
+      All HTML for pages will be saved to and loaded from a temp directory on disk. The files are saved to the following directory: <code>/xowa/user/anonymous/app/tmp/html</code>. This is done for performance reasons related to SWT / XULRunner. See <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_4" title="Options/Security">Options/Security</a>
     </p>
     <p>
-      HTML can be changed to load directly from memory at <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_5" title="Options/Security" class="xowa-visited">Options/Security</a>
+      HTML can be changed to load directly from memory at <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_5" title="Options/Security">Options/Security</a>
     </p>
     <h2>
       <span class="mw-headline" id="Bookmarks">Bookmarks</span>
@@ -162,7 +162,7 @@
       Bookmarks are enabled by default. Note that no data is ever written automatically to the Bookmarks page, so one can simply not use the <code><span style="color:blue;">add</span></code> feature.
     </p>
     <p>
-      If you wish to disable the feature completely (to prevent accidental clicks), then you can disable it at <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_6" title="Options/Security" class="xowa-visited">Options/Security</a>
+      If you wish to disable the feature completely (to prevent accidental clicks), then you can disable it at <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_6" title="Options/Security">Options/Security</a>
     </p>
     <h2>
       <span class="mw-headline" id="File_download">File download</span>
@@ -171,7 +171,7 @@
       File download is disabled by default. All files are downloaded to the following directory: <code>/xowa/file</code>.
     </p>
     <p>
-      If you've enabled it, you can disable it at <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_7" title="Options/Files" class="xowa-visited">Options/Files</a>
+      If you've enabled it, you can disable it at <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_7" title="Options/Files">Options/Files</a>
     </p>
     <h2>
       <span class="mw-headline" id="Math_images_.28LaTEX_only.29">Math images (LaT<sub>E</sub>X only)</span>
@@ -183,7 +183,7 @@
       If you choose to use LaT<sub>E</sub>X then temporary files will be generated. All files are created in the following directory: <code>/xowa/file/name_of_wiki/math</code>.
     </p>
     <p>
-      You can always disable LaT<sub>E</sub>X again at <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_8" title="Options/Math" class="xowa-visited">Options/Math</a>
+      You can always disable LaT<sub>E</sub>X again at <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_8" title="Options/Math">Options/Math</a>
     </p>
     <h2>
       <span class="mw-headline" id="Content_applications">Content applications</span>
