--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,7 +82,7 @@
       <span class="mw-headline" id="Disclaimer">Disclaimer</span>
     </h2>
     <p>
-      Please note that this program is beta software. Although it is my best hope that you find this program functional and useful, I make no assurances regarding stability or fitness of purpose. For more details, see <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_2" title="Help/License/Code" class="xowa-visited">Help/License/Code</a>.
+      Please note that this program is beta software. Although it is my best hope that you find this program functional and useful, I make no assurances regarding stability or fitness of purpose. For more details, see <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_2" title="Help/License/Code">Help/License/Code</a>.
     </p>
     <h2>
       <span class="mw-headline" id="Release_notes">Release notes</span>
@@ -102,7 +102,7 @@
       </li>
     </ul>
     <p>
-      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_4" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_5" title="Change log" class="xowa-visited">change log</a>.
+      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_4" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_5" title="Change log">change log</a>.
     </p>
     <p>
       For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_6" title="Help/Release schedule">the release schedule</a>.
@@ -183,7 +183,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_12" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_12" title="Dashboard/Import/Online">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -216,7 +216,7 @@
     </h5>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_16" title="Wiki setup/Listing" class="xowa-visited">Wiki_setup/Listing</a>
+        Go to <a href="http://xowa.org/home/wiki/Wiki_setup/Listing.html" id="xolnki_16" title="Wiki setup/Listing">Wiki_setup/Listing</a>
       </li>
       <li>
         Navigate to your wiki page from the list
@@ -367,7 +367,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_36" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_36" title="Dashboard/Import/Online">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 829 known Wikimedia Foundation wikis
@@ -383,7 +383,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_38" title="Dashboard/Image databases">Image databases</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_38" title="Dashboard/Image databases" class="xowa-visited">Image databases</a>
         </td>
         <td>
           Download image databases for your wiki
@@ -423,7 +423,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_43" title="Change log" class="xowa-visited">Change log</a>
+          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_43" title="Change log">Change log</a>
         </td>
         <td>
           View changes for each XOWA release
@@ -431,7 +431,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_44" title="Diagnostics" class="xowa-visited">Diagnostics</a>
+          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_44" title="Diagnostics">Diagnostics</a>
         </td>
         <td>
           Run test pages to make sure that XOWA works on your system.
