--- a/home/wiki/Options/Security.html
+++ b/home/wiki/Options/Security.html
@@ -126,11 +126,11 @@
           <div id='xowa.app.web.enabled__name' class='xocfg_itm_name'>
             Web access enabled
           </div>
-          <div id='xowa.app.web.enabled__undo' data-xocfg-type='bool' class='xocfg_itm_delete'>
+          <div id='xowa.app.web.enabled__undo' data-xocfg-type='bool' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.web.enabled")' title="reset to &quot;y&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.web.enabled" data-xocfg-key="xowa.app.web.enabled" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox">
+            <input id="xowa.app.web.enabled" data-xocfg-key="xowa.app.web.enabled" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool" type="checkbox" checked="checked">
           </div><input type='hidden' id='xowa.app.web.enabled__key_box' value='xowa.app.web.enabled'> <input type='hidden' id='xowa.app.web.enabled__ctx_box' value='app'>
         </div>
         <div id='xowa.app.web.enabled_help_div' class='xohelp_div'>
