--- a/home/wiki/App/Setup/Update/Manual.html
+++ b/home/wiki/App/Setup/Update/Manual.html
@@ -228,7 +228,7 @@
       <span class="mw-headline" id="In-app_updater">In-app updater</span>
     </h2>
     <p>
-      XOWA also has an in-app updater. See <a href="http://xowa.org/home/wiki/App/Setup/Update/In-app.html" id="xolnki_3" title="App/Setup/Update/In-app" class="xowa-visited">the in-app help page</a>
+      XOWA also has an in-app updater. See <a href="http://xowa.org/home/wiki/App/Setup/Update/In-app.html" id="xolnki_3" title="App/Setup/Update/In-app">the in-app help page</a>
     </p>
   
     </div>
