--- a/home/wiki/App/Xtn/Mediawiki/Math/Latex/Linux.html
+++ b/home/wiki/App/Xtn/Mediawiki/Math/Latex/Linux.html
@@ -99,14 +99,14 @@
       <span class="mw-headline" id="Options">Options</span>
     </h2>
     <p>
-      The math module uses MathJax by default. You can change it to LaT<sub>E</sub>X by navigating to <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_3" title="Options/Math" class="xowa-visited">Options/Math</a> and choosing LaTeX
+      The math module uses MathJax by default. You can change it to LaT<sub>E</sub>X by navigating to <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_3" title="Options/Math">Options/Math</a> and choosing LaTeX
     </p>
     <h2>
       <span class="mw-headline" id="Test">Test</span>
     </h2>
     <ul>
       <li>
-        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_4" title="Diagnostics/Math" class="xowa-visited">Diagnostics/Math</a>
+        Visit <a href="http://xowa.org/home/wiki/Diagnostics/Math.html" id="xolnki_4" title="Diagnostics/Math">Diagnostics/Math</a>
       </li>
     </ul>
   
