--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -273,7 +273,7 @@
         (add) Html: page_id added to HTML output; EX:&lt;!-- page_id=~{page_id} --&gt;.
       </li>
       <li>
-        (doc) Score: Added note that ImageMagick is required for Score to work {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_2" title="Options/Score" class="xowa-visited">Options/Score</a>
+        (doc) Score: Added note that ImageMagick is required for Score to work {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Score.html" id="xolnki_2" title="Options/Score">Options/Score</a>
       </li>
       <li>
         (dev) Tests: Xowa passes 2500 tests.
@@ -375,7 +375,7 @@
     </p>
     <ul>
       <li>
-        (add) File: English Wikipedia image database updated for 2013-12-02. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_4" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        (add) File: English Wikipedia image database updated for 2013-12-02. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_4" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
       </li>
       <li>
         (change) Parser: English Wikipedia pages (2013-12-02) with {{Dead_link}} no longer fail. See: <a href="http://en.wikipedia.org/wiki/Wikia" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Wikia</a>
@@ -434,7 +434,7 @@
         (change) Server: Fix for Windows path {contributed by Mattze96}.
       </li>
       <li>
-        (doc) Import: Instructions for importing wikia.com wikis {contributed by Nocte Draconis}. See: <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_6" title="App/Wiki types/Wikia.com">App/Wiki_types/Wikia.com</a>
+        (doc) Import: Instructions for importing wikia.com wikis {contributed by Nocte Draconis}. See: <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_6" title="App/Wiki types/Wikia.com" class="xowa-visited">App/Wiki_types/Wikia.com</a>
       </li>
     </ul>
     <h2>
@@ -445,7 +445,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Added search suggest v2 for more accurate results {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_7" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Added search suggest v2 for more accurate results {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_7" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (add) Scribunto: Fixed "Citation needed" for 2013-12-04 English Wikipedia; EX:mw.isSubsting. See: <a href="http://en.wikipedia.org/wiki/Albedo" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Albedo</a>
@@ -457,7 +457,7 @@
         (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">App/Xtn/Browser/HTTP_Server</a>
       </li>
       <li>
-        (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language" class="xowa-visited">Options/Language</a>
+        (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language">Options/Language</a>
       </li>
     </ul>
     <p>
@@ -521,7 +521,7 @@
     </p>
     <ul>
       <li>
-        (add) File: Added caching system for fsdb thumbs. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_10" title="Options/Files" class="xowa-visited">Options/Files</a>
+        (add) File: Added caching system for fsdb thumbs. See: <a href="http://xowa.org/home/wiki/Options/Files.html" id="xolnki_10" title="Options/Files">Options/Files</a>
       </li>
       <li>
         (add) Release: New build for Mac OS X 64 bit.
@@ -553,7 +553,7 @@
         (change) Log: Added redlink logging statements.
       </li>
       <li>
-        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script" class="xowa-visited">Options/Config_script</a>.
+        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script">Options/Config_script</a>.
       </li>
       <li>
         (change) Scribunto: Gsub was not handling lua callback functions correctly; EX:[[Minnesota]] [[nice]] and regx of %[%[([^#|%]]-)%]%]. See: <a href="http://en.wiktionary.org/wiki/Minnesota_nice" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/Minnesota_nice</a>
@@ -576,7 +576,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.4.4] Xnde: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c" -&gt; a = "bc". See: <a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
@@ -625,7 +625,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrent: Added torrent: xowa_simplewiki_images_2013-10-30_complete; EX:/bin/torrent/wiki/simple.wikipedia.org/xowa_simplewiki_images_2013-10-30_complete.torrent. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_14" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        (add) Torrent: Added torrent: xowa_simplewiki_images_2013-10-30_complete; EX:/bin/torrent/wiki/simple.wikipedia.org/xowa_simplewiki_images_2013-10-30_complete.torrent. See: <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_14" title="Dashboard/Image databases" class="xowa-visited">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.11.1] Html: Redlinks does not work when using "Back" / "Forward" {detected by Schnark; hidp123}.
@@ -694,7 +694,7 @@
         (fix) [broken since:v0.6.0] Xtn/Score: Score should default to "lilypond.exe" for Windows, not "lilypond" {detected by anonymous5}.
       </li>
       <li>
-        (add) Privacy: Added "web_access_enabled" option {requested by anonymous6}. See: <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_15" title="Options/Security" class="xowa-visited">Options/Security</a>
+        (add) Privacy: Added "web_access_enabled" option {requested by anonymous6}. See: <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_15" title="Options/Security">Options/Security</a>
       </li>
       <li>
         (change) Import: Sqlite wikis no longer use &amp;#09; for tab character.
@@ -800,7 +800,7 @@
         (done) Search: Search allows manually specifying additional namespaces.
       </li>
       <li>
-        (done) Search: Search allows default url arguments; EX:ns0=1&amp;ns14=1. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_16" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (done) Search: Search allows default url arguments; EX:ns0=1&amp;ns14=1. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_16" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (fix) [broken since:v0.7.3] Import: Import fails if data_storage_format is not .gz.
@@ -871,7 +871,7 @@
         (fix) [broken since:v0.9.3] Gallery: Gallery items with no caption would cause page to fail; EX:&lt;gallery&gt;File:A.png&lt;/gallery&gt; {detected by Schnark}. See: <a href="http://de.wikipedia.org/wiki/Lewis_Carroll" rel="nofollow" class="external free">http://de.wikipedia.org/wiki/Lewis_Carroll</a>
       </li>
       <li>
-        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window" class="xowa-visited">Options/Window</a>
+        (add) Gui: HTML box adjustment for Large fonts and Extra large fonts. See: <a href="http://xowa.org/home/wiki/Options/Window.html" id="xolnki_17" title="Options/Window">Options/Window</a>
       </li>
       <li>
         (file) [broken since:v0.9.3] Import: Search version2 fails if explicitly added to normal import (which uses search version2 by default).
@@ -937,7 +937,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Sqlite search now has word index database (gui). See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_18" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (add) Search: Sqlite search now has word index database (gui). See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_18" title="Options/Import">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -1099,7 +1099,7 @@
     </p>
     <ul>
       <li>
-        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus" class="xowa-visited">Options/Menus</a>
+        (add) Gui: Application menu bar now available. See: <a href="http://xowa.org/home/wiki/Options/Menus.html" id="xolnki_21" title="Options/Menus">Options/Menus</a>
       </li>
       <li>
         (add) Addon: Addon can automatically redirect http: to xowa: when offline {contributed by treck}.
@@ -1167,10 +1167,10 @@
         (add) Addon: Wikidata JSON formatter works for addon.
       </li>
       <li>
-        (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
-        (add) Import: Option to not automatically delete xml file after import {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_24" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (add) Import: Option to not automatically delete xml file after import {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_24" title="Options/Import">Options/Import</a>
       </li>
     </ul>
     <h2>
@@ -1268,7 +1268,7 @@
         (add) Options: Reorganized options pages.
       </li>
       <li>
-        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category" class="xowa-visited">Options/Category</a>
+        (add) Category: Hidden categories can now be separated from normal categories {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Category.html" id="xolnki_29" title="Options/Category">Options/Category</a>
       </li>
       <li>
         (add) Wikidata: Internationalization for Wikidata JSON formatter {contributed by Schnark}.
@@ -1392,7 +1392,7 @@
         (fix) References: Follow attribute should be supported {detected by Schnark}. See: <a href="http://de.wikisource.org/wiki/Die_Trunksucht" rel="nofollow" class="external free">http://de.wikisource.org/wiki/Die_Trunksucht</a>
       </li>
       <li>
-        (fix) Css: xowa_commons.css should not be downloaded {assisted by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_32" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (fix) Css: xowa_commons.css should not be downloaded {assisted by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_32" title="Options/Import">Options/Import</a>
       </li>
       <li>
         (fix) Import: Total article count should not include redirects for sqlite.
@@ -1491,13 +1491,13 @@
     </p>
     <ul>
       <li>
-        (add) Import: Sqlite database import available through UI. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_33" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (add) Import: Sqlite database import available through UI. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_33" title="Options/Import">Options/Import</a>
       </li>
       <li>
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
       </li>
       <li>
-        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
       <li>
         (fix) Import: Import failed to "read from file" if wiki.unzip was present.
@@ -1688,7 +1688,7 @@
         (fix) Search: Search broken when not using search suggestions {detected by hidp123;anonymous7}.
       </li>
       <li>
-        (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (add) Import: Import/Script redesigned to be more intuitive {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_39" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
@@ -1734,7 +1734,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Dynamic search suggestions; EX:Go to search box and start typing "e" "a" "r" "t" "h" {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_40" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Dynamic search suggestions; EX:Go to search box and start typing "e" "a" "r" "t" "h" {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_40" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (fix) Xtn/Lst: Lst handles recursive {{#lst}} calls; EX:http://it.wikisource.org {detected by Joe Webber}. See: <a href="http://it.wikisource.org" rel="nofollow" class="external free">http://it.wikisource.org</a>
@@ -1811,7 +1811,7 @@
     </p>
     <ul>
       <li>
-        (add) Import: pages now save directly to compressed format (.gz) {requested by Miles}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_41" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (add) Import: pages now save directly to compressed format (.gz) {requested by Miles}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_41" title="Options/Import">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -2215,7 +2215,7 @@
     </p>
     <ul>
       <li>
-        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML" class="xowa-visited">Options/HTML</a>
+        (add) Missing talk/user namespace links can be configured to show red/hidden {requested by Schnark} See <a href="http://xowa.org/home/wiki/Options/HTML.html" id="xolnki_54" title="Options/HTML">Options/HTML</a>
       </li>
       <li>
         (add) Visited pages now color-coded {assisted by Schnark}
@@ -2285,7 +2285,7 @@
         (add) Option for content application paths {requested by Miles} See <a href="http://xowa.org/home/wiki/Options/Apps.html" id="xolnki_55" title="Options/Apps">Options/Apps</a>
       </li>
       <li>
-        (add) Option for data dump imports, including automatic zipping {requested by hidp123;Miles} See <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_56" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (add) Option for data dump imports, including automatic zipping {requested by hidp123;Miles} See <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_56" title="Options/Import">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -2327,7 +2327,7 @@
     </p>
     <ul>
       <li>
-        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
+        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto">Options/Scribunto</a>
       </li>
       <li>
         (add) Improvements to Schnark's Javascript Timeline {contributed by Schnark}
