--- a/home/wiki/Change_log/v3.8.5.1.html
+++ b/home/wiki/Change_log/v3.8.5.1.html
@@ -131,7 +131,7 @@
         <span style='font-variant:small-caps'>Example</span>: xowa.api.addon.bldr.central.log_verbose = 'y';.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_3" title="Options/Config script" class="xowa-visited">Options/Config_script</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_3" title="Options/Config script">Options/Config_script</a>
       </dd>
     </dl>
     <ul>
@@ -187,7 +187,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_4" title="Options/Import" class="xowa-visited">Options/Import</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_4" title="Options/Import">Options/Import</a>
       </dd>
     </dl>
     <ul>
