--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -38,13 +38,13 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/System_requirements.html" id="xolnki_3" title="App/Setup/System requirements" class="xowa-visited">System requirements</a><br>
+              <a href="http://xowa.org/home/wiki/App/Setup/System_requirements.html" id="xolnki_3" title="App/Setup/System requirements">System requirements</a><br>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Installation.html" id="xolnki_4" title="App/Setup/Installation" class="xowa-visited">Installing</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_5" title="App/Setup/Upgrading" class="xowa-visited">Upgrading</a>
+              <a href="http://xowa.org/home/wiki/App/Setup/Upgrading.html" id="xolnki_5" title="App/Setup/Upgrading">Upgrading</a>
             </li>
           </ul>
         </td>
@@ -60,7 +60,7 @@
               <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia">Simple Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
+              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia">English Wikipedia</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
@@ -80,7 +80,7 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Main_window.html" id="xolnki_10" title="App/UI/Main window" class="xowa-visited">Using the Main Window</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Main_window.html" id="xolnki_10" title="App/UI/Main window">Using the Main Window</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/UI/Find_box.html" id="xolnki_11" title="App/UI/Find box">Finding text on a page</a>
@@ -129,13 +129,13 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Keybindings.html" id="xolnki_17" title="App/UI/Keybindings" class="xowa-visited">Keybindings</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Keybindings.html" id="xolnki_17" title="App/UI/Keybindings">Keybindings</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/UI/Address_bar/URLs.html" id="xolnki_18" title="App/UI/Address bar/URLs">Address_bar/URLs</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/UI/Address_bar/Shortcuts.html" id="xolnki_19" title="App/UI/Address bar/Shortcuts" class="xowa-visited">Address_bar/Shortcuts</a>
+              <a href="http://xowa.org/home/wiki/App/UI/Address_bar/Shortcuts.html" id="xolnki_19" title="App/UI/Address bar/Shortcuts">Address_bar/Shortcuts</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Environment/Viewer_apps.html" id="xolnki_20" title="Dev/Environment/Viewer apps">Viewer apps</a>
@@ -161,7 +161,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_23" title="App/Wiki types/Wikia.com">Wikia.com</a>
+              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_23" title="App/Wiki types/Wikia.com" class="xowa-visited">Wikia.com and other MediaWiki wikis</a>
             </li>
           </ul>
         </td>
@@ -178,10 +178,10 @@
         <td style='width:20%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line">Overview</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_24" title="Dev/Command-line" class="xowa-visited">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_25" title="Dev/Command-line/Dumps">Image dumps</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_26" title="Dev/Command-line/Wikidata">Wikidata</a>
@@ -197,7 +197,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Config_files/Index.html" id="xolnki_28" title="Dev/Config files/Index" class="xowa-visited">Config files</a>
+              <a href="http://xowa.org/home/wiki/Dev/Config_files/Index.html" id="xolnki_28" title="Dev/Config files/Index">Config files</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Design/Language_files.html" id="xolnki_29" title="Dev/Design/Language files">Language files</a>
@@ -213,7 +213,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/Shrinking.html" id="xolnki_31" title="App/Import/Shrinking" class="xowa-visited">Shrinking a wiki</a>
+              <a href="http://xowa.org/home/wiki/App/Import/Shrinking.html" id="xolnki_31" title="App/Import/Shrinking">Shrinking a wiki</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_32" title="App/Setup/Flash card">Installing to a flash card</a>
@@ -277,7 +277,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics" class="xowa-visited">Diagnostics</a>
+              <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_43" title="Diagnostics">Diagnostics</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Setup/Installation/Self_extracting_exe.html" id="xolnki_44" title="App/Setup/Installation/Self extracting exe">Self extracting exe</a>
@@ -313,13 +313,13 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_48" title="Help/License/Code" class="xowa-visited">License/Code</a>
+              <a href="http://xowa.org/home/wiki/Help/License/Code.html" id="xolnki_48" title="Help/License/Code">License/Code</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Help/License/Docs.html" id="xolnki_49" title="Help/License/Docs">License/Docs</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Help/Privacy/Desktop.html" id="xolnki_50" title="Help/Privacy/Desktop" class="xowa-visited">Privacy</a>
+              <a href="http://xowa.org/home/wiki/Help/Privacy/Desktop.html" id="xolnki_50" title="Help/Privacy/Desktop">Privacy</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Help/Security.html" id="xolnki_51" title="Help/Security">Security</a>
