--- a/home/wiki/Help/Security.html
+++ b/home/wiki/Help/Security.html
@@ -63,7 +63,7 @@
       </li>
     </ul>
     <p>
-      In order to disable Javascript, you can uncheck the Javascript option at <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_2" title="Options/Security" class="xowa-visited">Options/Security</a>
+      In order to disable Javascript, you can uncheck the Javascript option at <a href="http://xowa.org/home/wiki/Options/Security.html" id="xolnki_2" title="Options/Security">Options/Security</a>
     </p>
   
     </div>
