--- a/home/wiki/Options/Dev.html
+++ b/home/wiki/Options/Dev.html
@@ -197,7 +197,7 @@
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.setup.previous_version")' title="reset to &quot;&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.setup.previous_version" data-xocfg-key="xowa.app.setup.previous_version" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="4.1.0.1701">
+            <input id="xowa.app.setup.previous_version" data-xocfg-key="xowa.app.setup.previous_version" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="4.0.3.1702">
           </div><input type='hidden' id='xowa.app.setup.previous_version__key_box' value='xowa.app.setup.previous_version'> <input type='hidden' id='xowa.app.setup.previous_version__ctx_box' value='app'>
         </div>
         <div id='xowa.app.setup.previous_version_help_div' class='xohelp_div'>
@@ -233,7 +233,7 @@
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.cfg.previous_grp")' title="reset to &quot;xowa.app.security&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.cfg.previous_grp" data-xocfg-key="xowa.app.cfg.previous_grp" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="xowa.wiki.hdumps">
+            <input id="xowa.app.cfg.previous_grp" data-xocfg-key="xowa.app.cfg.previous_grp" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="xowa.files.general">
           </div><input type='hidden' id='xowa.app.cfg.previous_grp__key_box' value='xowa.app.cfg.previous_grp'> <input type='hidden' id='xowa.app.cfg.previous_grp__ctx_box' value='app'>
         </div>
         <div id='xowa.app.cfg.previous_grp_help_div' class='xohelp_div'>
@@ -312,8 +312,8 @@
           <div class='xocfg_itm_data'>
 <textarea id="xowa.app.startup.tabs.previous_list" data-xocfg-key="xowa.app.startup.tabs.previous_list" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">
 home/wiki/Special:XowaCfg
-home/wiki/Special:XowaAppUpdate
-home/wiki/Blog/2017-01
+home/wiki/App/Wiki_types/Wikia.com
+home/wiki/Dev/File/Setup/Windows
 </textarea>
           </div><input type='hidden' id='xowa.app.startup.tabs.previous_list__key_box' value='xowa.app.startup.tabs.previous_list'> <input type='hidden' id='xowa.app.startup.tabs.previous_list__ctx_box' value='app'>
         </div>
@@ -332,7 +332,7 @@ home/wiki/Blog/2017-01
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.startup.tabs.previous_selected")' title="reset to &quot;&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="2">
+            <input id="xowa.app.startup.tabs.previous_selected" data-xocfg-key="xowa.app.startup.tabs.previous_selected" data-xocfg-type="int" accesskey="d" class="xocfg_data__int xocfg_data__readonly" type="text" readonly="true" value="1">
           </div><input type='hidden' id='xowa.app.startup.tabs.previous_selected__key_box' value='xowa.app.startup.tabs.previous_selected'> <input type='hidden' id='xowa.app.startup.tabs.previous_selected__ctx_box' value='app'>
         </div>
         <div id='xowa.app.startup.tabs.previous_selected_help_div' class='xohelp_div'>
@@ -371,7 +371,7 @@ home/wiki/Blog/2017-01
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.toggles.wikidata-langs")' title="reset to &quot;y&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
-            <input id="xowa.html.toggles.wikidata-langs" data-xocfg-key="xowa.html.toggles.wikidata-langs" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool xocfg_data__readonly" type="checkbox" disabled="disabled">
+            <input id="xowa.html.toggles.wikidata-langs" data-xocfg-key="xowa.html.toggles.wikidata-langs" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool xocfg_data__readonly" type="checkbox" disabled="disabled" checked="checked">
           </div><input type='hidden' id='xowa.html.toggles.wikidata-langs__key_box' value='xowa.html.toggles.wikidata-langs'> <input type='hidden' id='xowa.html.toggles.wikidata-langs__ctx_box' value='app'>
         </div>
         <div id='xowa.html.toggles.wikidata-langs_help_div' class='xohelp_div'>
