--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -278,17 +278,17 @@
           </div>
           <div id='xowa.files.cache.info__undo' data-xocfg-type='memo' class='xocfg_itm_delete xocfg_itm_hide'>
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.files.cache.info")' title="reset to &quot;cache folder: C:\xowa\file
-            space used: 45.523 MB
-            file count: 3315
-            oldest file: 2017-01-07 00:13:09
+            space used: 0.000  B
+            file count: 0
+            oldest file: 
             &quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
 <textarea id="xowa.files.cache.info" data-xocfg-key="xowa.files.cache.info" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">
 cache folder: C:\xowa\file
-space used: 45.523 MB
-file count: 3315
-oldest file: 2017-01-07 00:13:09
+space used: 0.000  B
+file count: 0
+oldest file: 
 </textarea>
           </div><input type='hidden' id='xowa.files.cache.info__key_box' value='xowa.files.cache.info'> <input type='hidden' id='xowa.files.cache.info__ctx_box' value='app'>
         </div>
