--- a/home/wiki/Options/Shortcuts.html
+++ b/home/wiki/Options/Shortcuts.html
@@ -683,16 +683,16 @@
         </div>
         <div class="xocfg_row flex_div">
           <div class='xocfg_itm_help'>
-            <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.gui.shortcuts.xowa.nav.help.xowa_update")' title='view more info'>&nbsp;</span>
+            <span class='xoimg_btn_x16 xoimg_help_tip' href='javascript:void(0)' onclick='return xo.help.toggle("xowa.gui.shortcuts.xowa.nav.help.xowa_update-1")' title='view more info'>&nbsp;</span>
           </div>
-          <div id='xowa.gui.shortcuts.xowa.nav.help.xowa_update__name' class='xocfg_itm_name'>
+          <div id='xowa.gui.shortcuts.xowa.nav.help.xowa_update-1__name' class='xocfg_itm_name'>
             XOWA App Update
           </div>
-          <div id='xowa.gui.shortcuts.xowa.nav.help.xowa_update__undo' data-xocfg-type='gui.binding' class='xocfg_itm_delete xocfg_itm_hide'>
-            <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.gui.shortcuts.xowa.nav.help.xowa_update")' title="reset to &quot;browser|key.none&quot;">&nbsp;</span>
+          <div id='xowa.gui.shortcuts.xowa.nav.help.xowa_update-1__undo' data-xocfg-type='gui.binding' class='xocfg_itm_delete xocfg_itm_hide'>
+            <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.gui.shortcuts.xowa.nav.help.xowa_update-1")' title="reset to &quot;browser|key.none&quot;">&nbsp;</span>
           </div>
           <div class='xocfg_itm_data'>
-            <select class="xocfg_data__gui_binding__box" id="xowa.gui.shortcuts.xowa.nav.help.xowa_update-box" data-xocfg-key="xowa.gui.shortcuts.xowa.nav.help.xowa_update" data-xocfg-type="gui.binding-box" size="1" accesskey="d">
+            <select class="xocfg_data__gui_binding__box" id="xowa.gui.shortcuts.xowa.nav.help.xowa_update-1-box" data-xocfg-key="xowa.gui.shortcuts.xowa.nav.help.xowa_update-1" data-xocfg-type="gui.binding-box" size="1" accesskey="d">
               <option value="browser" selected="selected">
                 Window
               </option>
@@ -714,11 +714,11 @@
               <option value="browser.info">
                 System Messages box
               </option>
-            </select> <input class="xocfg_data__gui_binding__ipt" id="xowa.gui.shortcuts.xowa.nav.help.xowa_update-ipt" data-xocfg-key="xowa.gui.shortcuts.xowa.nav.help.xowa_update" data-xocfg-type="gui.binding-ipt" accesskey="d" type="text" value="None"> <span class="xoimg_btn_x16 xoimg_app_configure" onclick='xo.cfg_edit.gui_binding__remap_send("xowa.gui.shortcuts.xowa.nav.help.xowa_update", "XOWA App Update");'>&nbsp;</span>
-          </div><input type='hidden' id='xowa.gui.shortcuts.xowa.nav.help.xowa_update__key_box' value='xowa.gui.shortcuts.xowa.nav.help.xowa_update'> <input type='hidden' id='xowa.gui.shortcuts.xowa.nav.help.xowa_update__ctx_box' value='app'>
+            </select> <input class="xocfg_data__gui_binding__ipt" id="xowa.gui.shortcuts.xowa.nav.help.xowa_update-1-ipt" data-xocfg-key="xowa.gui.shortcuts.xowa.nav.help.xowa_update-1" data-xocfg-type="gui.binding-ipt" accesskey="d" type="text" value="None"> <span class="xoimg_btn_x16 xoimg_app_configure" onclick='xo.cfg_edit.gui_binding__remap_send("xowa.gui.shortcuts.xowa.nav.help.xowa_update-1", "XOWA App Update");'>&nbsp;</span>
+          </div><input type='hidden' id='xowa.gui.shortcuts.xowa.nav.help.xowa_update-1__key_box' value='xowa.gui.shortcuts.xowa.nav.help.xowa_update-1'> <input type='hidden' id='xowa.gui.shortcuts.xowa.nav.help.xowa_update-1__ctx_box' value='app'>
         </div>
-        <div id='xowa.gui.shortcuts.xowa.nav.help.xowa_update_help_div' class='xohelp_div'>
-          <div id='xowa.gui.shortcuts.xowa.nav.help.xowa_update_help_msg' class='xohelp_msg'>
+        <div id='xowa.gui.shortcuts.xowa.nav.help.xowa_update-1_help_div' class='xohelp_div'>
+          <div id='xowa.gui.shortcuts.xowa.nav.help.xowa_update-1_help_msg' class='xohelp_msg'>
             <p>
               Update the XOWA app
             </p>
